--- a/pom.xml
+++ b/pom.xml
@@ -14,12 +14,14 @@
         <version>1.2.1.RELEASE</version>
     </parent>
 
+    <!--PROPERTIES-->
     <properties>
+        <java.version>1.7</java.version>
         <joda-time-version>2.6</joda-time-version>
     </properties>
 
+    <!--DEPENDENCIES-->
     <dependencies>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -31,7 +33,22 @@
             <version>${joda-time-version}</version>
         </dependency>
 
+        <!--Testing-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
+    <!--BUILD-->
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
