jpa for other classes, hsqldb added

--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
 
     <!--DEPENDENCIES-->
     <dependencies>
+        <!--Spring Boot starters-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -31,6 +32,14 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
 
+        <!--DB-->
+        <dependency>
+            <groupId>org.hsqldb</groupId>
+            <artifactId>hsqldb</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+
+        <!--Utils-->
         <dependency>
             <groupId>joda-time</groupId>
             <artifactId>joda-time</artifactId>
