--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.datasource.url=jdbc:hsqldb:hsql://localhost:9001/knu;ifexist=true
+spring.datasource.url=jdbc:hsqldb:hsql://localhost:9001/timetableknu;ifexist=true
 spring.datasource.username=SA
 spring.datasource.password=
