--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
-spring.datasource.url=jdbc:hsqldb:hsql://localhost:9001/timetableknu;ifexist=true
-spring.datasource.username=SA
-spring.datasource.password=
+#spring.datasource.url=jdbc:hsqldb:hsql://localhost:9001/timetableknu;ifexist=true
+#spring.datasource.username=SA
+#spring.datasource.password=
+
+security.user.name=admin
+security.user.password=pass
